# robot_motion_generation

./: .gitignore  README  README.md  commands.txt  pyproject.toml  requirements.txt  run_pipeline.py  webots_ros2.sh
docs/: adding-a-robot.md  adding-an-adapter.md  installation.md
docs/inputs/: demo.csv  pick_and_place.json
gui/src/my_qt_gui/: package.xml
motion_pipeline/: setup.py
motion_pipeline/adapters/: __init__.py  base.py  demo.py  json_adapter.py  mediapipe_csv_adapter.py  symbolic_json_adapter.py
motion_pipeline/cli/: run_demo.py
motion_pipeline/core/: canonical.py  motion.py  schema.py  task_level.py  task_spec.py
motion_pipeline/emitter/: emitter.py
motion_pipeline/input/: hode_spin.csv  medium_wave.json  mix.csv  nod.json  nodding.csv  pick_and_place.csv  pick_and_place.json  pickplace.csv  reach.json  shake_head.csv  shelf_to_floor.json  simple_wave.json  standing.csv  t_pose.json
motion_pipeline/motion_pipeline/adapters/: __init__.py  base.py  mediapipe_csv_adapter.py  simple_json_adapter.py  symbolic_json_adapter.py
motion_pipeline/motion_pipeline/core/: joint_level.py  task_level.py
motion_pipeline/motion_pipeline/emitter/: emitter.py
motion_pipeline/motion_pipeline/input/: arm_up_down.csv  pick_and_place.json
motion_pipeline/rml/: converter.py
motion_pipeline/runtime/: generate.py  ik_solver.py  moveit_ik.py  pipeline.py  retargeter.py  robot_config.py  robots.py  task_spec_to_program.py
motion_pipeline/validator/: langium.py
motion_pipeline_new/adapters/: __init__.py  json_adapter.py  video_adapter.py
motion_pipeline_new/cli/: run_demo.py
motion_pipeline_new/core/: schema.py  task_spec.py
motion_pipeline_new/emitter/: emitter.py
motion_pipeline_new/input/: complex_wave.json
motion_pipeline_new/rml/: converter.py
motion_pipeline_new/runtime/: task_spec_to_program.py
motion_pipeline_new/validator/: langium.py
robot-motion-language/: .gitignore  test.rml
robot-motion-language/syntaxes/: robot-motion-language.monarch.ts
ros_ws/: colcon_defaults.yaml
ros_ws/src/motion_pipeline_bridge/: package.xml  setup.cfg  setup.py
ros_ws/src/motion_pipeline_bridge/motion_pipeline_bridge/: database_logic.py  generator_node.py
ros_ws/src/motion_pipeline_msgs/: CMakeLists.txt  package.xml
ros_ws/src/motion_pipeline_msgs/msg/: PipelineLog.msg
ros_ws/src/motion_pipeline_msgs/schemas/: motion_command.schema.json
ros_ws/src/motion_pipeline_msgs/srv/: GenerateRequest.srv  GetMotions.srv  SaveMotion.srv
ros_ws/src/my_qt_gui/: CMakeLists.txt  package.xml
ros_ws/src/my_qt_gui/include/my_qt_gui/: database_panel.hpp  editor_panel.hpp  main_window.hpp  options_panel.hpp
ros_ws/src/my_qt_gui/src/: database_panel.cpp  editor_panel.cpp  main_window.cpp  options_panel.cpp
ros_ws/src/my_qt_gui/ui/: main_window.ui  main_window.ui.autosave
services/messaging/: send.py
tiago_ws/: .gitignore
webots/: requirements.txt
webots/worlds/: .example.wbproj  atlas.wbt  example.wbt  nao.wbt  pr2.wbt  tiago.wbt  ur5e.wbt
(+149 files in other folders)
